--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
             <version>1.7.30</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 
 
